# TheXTech

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PORTING.md  README.ESP.md  README.RUS.md  README.md  a2xtech.pro  changelog.txt  code of conduct.md  gfx-convert-wii.py  pge_version.h  repo.sh  version.cmake  version.h
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  compile-fail-report.yml
.github/ci-helper/: create-dmg.sh  pack-game-macos.sh  pack-game.sh  translate_patcher.py  translate_sync_assets.sh  translate_sync_to_stable.sh  translate_update.sh
.github/workflows/: .cancel-devel.yml  .cancel.yml  .cancel.yml.off  16m-ci.yml  3ds-ci.yml  android-ci.yml  android-fdroid-ci.yml  blocksds-ci.yml  continuous_integration.yml  emscripten.yml  flatpak.yml  haiku-ci.yml  homebrew-assets-ci.yml  ios-ci.yml  macos-ci.yml  portmaster-ci.yml  regression-testing-ci.yaml  switch-ci.yml  sync-langs.yml  ubuntu-ci.yml  ubuntu-deb-aod-ci.yml  ubuntu-deb-ci.yml  ubuntu-deb-smbx-ci.yml  ubuntu-tar-ci.yml  vita-ci.yml  vita.yml  wii-ci.yml  wiiu-ci.yml  windows-ci.yml
android-project/: .gitignore  build.gradle  build_init.sh  gradle.properties  settings.gradle
android-project/thextech/: build.gradle
cmake/: TargetArch.cmake  Toolchain3DS.txt  blocks_arm9_crt0.s  build_platforms.cmake  build_props.cmake  ci_linux_gcc_toolchain_arm64.cmake  ci_linux_gcc_toolchain_armhf.cmake  ci_linux_gcc_toolchain_x32.cmake  ci_windows_mingw_toolchain_x32.cmake  ci_windows_mingw_toolchain_x64.cmake  ci_windows_msvc_toolchain_arm64.cmake  deploy.cmake  devkitPro.cmake  git_info.cmake  git_version.cmake  git_version_update.cmake  icon.desktop.in  library_FreeImage.cmake  library_FreeType.cmake  library_HarfBuzz.cmake  library_SDLMixerX.cmake  library_discord_rpc.cmake  library_ffmpeg.cmake  library_glew.cmake  library_libvpx.cmake  library_luabind.cmake  library_luajit.cmake  library_mbediso.cmake  library_syslibs.cmake  library_zlib.cmake  overlays-16m.ld  package_psp.cmake  package_switch.cmake  package_vita.cmake  vita_buildprops.cmake
common/: library_luabind.cmake  library_luajit.cmake
debian/: changelog  control  copyright  rules
docs/: BUILDING_VITA.txt  README_3DS.md  README_DSI.md  README_SWITCH.md  README_VITA.ESP.md  README_VITA.RUS.md  README_VITA.md  README_WII.md  README_WIIU.md  editor.ini
lib/: fader.cpp  fader.h  fixed_point.cpp  fixed_point.h  floating_point.cpp  floating_point.h  fmt_format_ne.h  fmt_impl.cpp  fmt_time_ne.h  forced_int.h  gif.h  gif_writer.h  json.hpp  numeric_types.h  pge_cpu_arch.h  pge_delay.h  pge_inttypes.h  pge_tonearest.h  util.cpp  util.h
lib/Allocator/: Allocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  README.md  StackLinkedList.h  StackLinkedListImpl.h  Utils.h  linear-allocator.cmake  pool-allocator.cmake
lib/AppPath/: app_path.cmake  app_path.cpp  app_path.h  app_path_macosx.h  app_path_macosx.m
lib/Archives/: archives.h  archives_dir.cpp  archives_mount.cpp  archives_priv.h  archives_rwops.cpp
lib/CrashHandler/: backtrace.h.in  crash_handler.cpp  crash_handler.h
lib/DirManager/: dirman.cmake  dirman.cpp  dirman.h  dirman_3ds.cpp  dirman_dkp.cpp  dirman_posix.cpp  dirman_private.h  dirman_tiger.cpp  dirman_vita.cpp  dirman_vita.h  dirman_vitafs.cpp  dirman_winapi.cpp
lib/FileMapper/: FileMapper.cmake  file_mapper.cpp  file_mapper.h
lib/FixPointCS/: Fixed64.h  FixedUtil.h
lib/Graphics/: PGEString.h  bitmask2rgba.c  bitmask2rgba.cmake  bitmask2rgba.h  graphics_funcs.cpp  graphics_funcs.h  image_size.cpp  image_size.h  point.cpp  point.h  (+11 more)
lib/luabind/: CMakeLists.txt  build_props.cmake
lib/luabind/lua/: file_open.c  file_open.h  lauxlib.c  liolib.c  llex.c  loadlib.c  luaconf.h
lib/luabind/lua_includes/: lauxlib_jit.h  lua.hpp  lua_jit.h  luajit.h  lualib_jit.h
lib/luabind/luabind/: dependency_policy.hpp  lua_include.hpp  lua_index_proxy.hpp  lua_iterator_proxy.hpp  lua_proxy_interface.hpp  out_value_policy.hpp  return_reference_to_policy.hpp
lib/luabind/luabind/detail/: call.hpp  call_function.hpp
lib/sdl_proxy_rwops/: CMakeLists.txt  sdl_proxy_rwops.c  sdl_proxy_rwops_file.c
lib/sdl_proxy_rwops/include/SDL2/: SDL_rwops.h  _priv_rwops_funcs.h
resources/: PkgInfo  a2xtech.icns  a2xtech.plist.in  a2xtech.rc  thextech.icns  thextech.plist.in  thextech.plist.ios.in  thextech.plist.tiger.in  thextech.plist.tvos.in  thextech.rc
script/: CMakeLists.txt
script/include/: xtech_lua_main.h
script/src/: xtech_lua_main.cpp
src/: SDL_supplement.h  blk_id.h  blocks.cpp  blocks.h  capabilities.cpp  capabilities.h  change_res.cpp  change_res.h  cmd_line_setup.h  collision.cpp  collision.h  compat.cpp  compat.h  config.cpp  config.h  control_types.h  controls.h  custom.cpp  custom.h  custom_bgo.cpp  custom_bgo.h  custom_blocks.cpp  custom_blocks.h  custom_levels.cpp  custom_levels.h  custom_paths.cpp  custom_paths.h  custom_scene.cpp  custom_scene.h  custom_tiles.cpp  custom_tiles.h  draw_planes.h  editor.cpp  editor.h  eff_id.h  effect.cpp  effect.h  floats.h  frame_timer.cpp  frame_timer.h  (+69 more)
test/: CI-tests.py  CMakeLists.txt
test/common/: catch_amalgamated.cpp  catch_amalgamated.hpp
test/levels/: Beech kick 1.lvl  Beech kick 2.lvl  Conveyor hell.lvl  Exits test.lvl  Fall test.lvl  Fence climb Move.lvl  Fence climb.lvl  Player clip - min.lvl  Player clip.lvl  Player through block.lvl  Pockey test.lvl  Raft ride.lvl  Shelf surf.lvl  Shell on spring.lvl  Skull raft 2.lvl  Slope test.lvl  Veggies shoot.lvl  compat.ini  doors test.lvl
test/test_msg_macro/: CMakeLists.txt  test_msg_macro.cpp
test/worlds/speedrun-unit-test/: unit-test.lvlx  unit-test.wldx
utils/: submodule-update.sh  update-copyright.sh
utils/convertkit/GIFs2PNG/: CMakeLists.txt  gifs2png.cpp  version.cmake  version.h
utils/convertkit/GIFs2PNG/_resources/: cat_gif2png.icns  gifs2png.qrc  gifs2png.rc
utils/convertkit/GIFs2PNG/_resources/cat_gif2png/: make_icns.sh
utils/convertkit/GIFs2PNG/common_features/: config_manager.cpp  config_manager.h
(+868 files in other folders)
